--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;900&display=swap" rel="stylesheet">
-    <link href="scss/main.scss">
+    <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
     <header class="hero">
-        <div class="container">
-            <h1 class="main-text">
+        <div class="container spacing">
+            <h1 class="primary-title">
                 Amazing shoes at an amazing price
             </h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae laudantium
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae
+                laudantium
                 quidem enim sit sequi!
             </p>
-            <a href="" class="btn">See what we have</a>
+            <a href="#" class="btn">See what we have</a>
         </div>
     </header>
 
@@ -89,4 +92,5 @@
         </section>
     </main>
 </body>
+
 </html>
