The final LP for shoes website

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                 Amazing shoes at an amazing price
             </h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae
-                laudantium
-                quidem enim sit sequi!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae laudantium quidem enim sit sequi!
             </p>
             <a href="#" class="btn">See what we have</a>
         </div>
@@ -34,22 +32,19 @@
                     <a href="#" class="featured_items">
                         <img src="img/shoe-4.png" alt="" class="featured__img">
                         <p class="featured__details">
-                            <span class="price">$99</span>
-                            shoe name
+                            <span class="price">$99</span> shoe name
                         </p>
                     </a>
                     <a href="" class="featured_items">
                         <img src="img/shoe-5.png" alt="" class="featured__img">
                         <p class="featured__details">
-                            <span class="price">$99</span>
-                            shoe name
+                            <span class="price">$99</span> shoe name
                         </p>
                     </a>
                     <a href="" class="featured_items">
                         <img src="img/shoe-6.png" alt="" class="featured__img">
                         <p class="featured__details">
-                            <span class="price">$99</span>
-                            shoe name
+                            <span class="price">$99</span> shoe name
                         </p>
                     </a>
                 </div>
@@ -61,30 +56,27 @@
                 <h2 class="section-title">
                     Our Products
                 </h2>
-                <article class="product">
+                <article class="product shoe-red spacing">
                     <img src="img/shoe-1.png" alt="" class="product__image">
                     <h3 class="product__title">A really nice shoe</h3>
                     <p class="product__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
-                        perspiciatis facilis beatae laudantium quidem enim sit sequi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae laudantium quidem enim sit sequi!
                     </p>
                     <a href="" class="btn">Buy now!</a>
                 </article>
-                <article class="product">
-                    <img src="" alt="" class="product__image">
+                <article class="product shoe-white spacing">
+                    <img src="img/shoe-2.png" alt="" class="product__image">
                     <h3 class="product__title">A really nice shoe</h3>
                     <p class="product__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
-                        perspiciatis facilis beatae laudantium quidem enim sit sequi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae laudantium quidem enim sit sequi!
                     </p>
                     <a href="" class="btn">Buy now!</a>
                 </article>
-                <article class="product">
-                    <img src="" alt="" class="product__image">
+                <article class="product shoe-blue spacing">
+                    <img src="img/shoe-3.png" alt="" class="product__image">
                     <h3 class="product__title">A really nice shoe</h3>
                     <p class="product__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
-                        perspiciatis facilis beatae laudantium quidem enim sit sequi!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam perspiciatis facilis beatae laudantium quidem enim sit sequi!
                     </p>
                     <a href="" class="btn">Buy now!</a>
                 </article>
